--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss-nesting": "^10.1.10",
     "postcss-preset-env": "^7.7.2",
     "remove-markdown": "^0.5.0",
+    "unocss": "^0.56.5",
     "vitepress": "^1.0.0-alpha.4",
     "vue": "^3.2.37"
   }
